<resources>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="app_name">Login App</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">todo2</string>
    <string name="welcome_nto_chal_chaliye">Welcome\nto Chal Chaliye</string>
    <string name="escape_the_ordinary_explore_the_extraordinary_with_nchal_chaliye">Escape the ordinary, explore the extraordinary with\nChal Chaliye.</string>
    <string name="get_started">Get Started</string>
    <string name="hi_nplease_login">Hi,\nPlease Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password_recover_it">Forgot Password? Recover it</string>
    <string name="or_login_with">Or Login With</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="recover_it">Recover it</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="signup">Signup</string>
    <string name="reset">Reset</string>
    <string name="login_success">Login Success !</string>
    <string name="todo6">TODO1</string>
    <string name="title_activity_edit_customer_profile">EditCustomerProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="cnic">CNIC</string>
    <string name="age">Age</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_to_nlogin_app">Welcome to\nLogin App</string>

</resources>